--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
-<script>
-    function computerplay('rock', 'paper', 'scissors')
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper scissors</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
+
+    <div class="score-board">
+        <div id="user-label" class="badge">user</div>
+        <div id="computer-label" class="badge">comp</div>
+        <span id="user-score"></span><span id="computer-score"></span>
+    </div>
+
+    <div class="result">
+        <p>Paper covers Rock. You Win!</p>
+    </div>
+
+    <div class="choices">
+        <div class="choice">
+            <img src="images/PngItem_2260873.png" width="50" height="70" id="r" alt="">
+        </div>
+        <div class="choice">
+            <img src="images/PngItem_2667252.png" width="50" height="70" id="p" alt="">
+        </div>
+        <div class="choice">
+            <img src="images/kindpng_5025731.png" width="50" height="70" id="s" alt="">
+        </div>
+    </div>
+
+    <p id="action-message">Make your move</p>
+    
+</body>
+</html>
